--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -18,7 +18,7 @@ AssetViewerProfileName=
 MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowPosition=(X=315,Y=143)
+NewWindowPosition=(X=-8,Y=-8)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
@@ -1265,14 +1265,71 @@ MM_ServerSetting_AllowPVP_C.Behavior=True
 MM_ServerSetting_AllowPVP_C.Render Transform=True
 MM_ServerSetting_AllowPVP_C.Clipping=True
 MM_ServerSetting_AllowPVP_C.Navigation=True
+WorldSettings.AI=True
+WorldSettings.LOD=True
+WorldSettings.Cooking=True
+MM_WorldSetting_AllowDayNightCycle_C.Default=True
+MM_WorldSetting_AllowDayNightCycle_C.Appearance=True
+MM_WorldSetting_AllowDayNightCycle_C.Designer=True
+MM_WorldSetting_AllowDayNightCycle_C.Input=True
+MM_WorldSetting_AllowDayNightCycle_C.Interaction=True
+MM_WorldSetting_AllowDayNightCycle_C.Performance=True
+MM_WorldSetting_AllowDayNightCycle_C.Layout=True
+MM_WorldSetting_AllowDayNightCycle_C.Behavior=True
+MM_WorldSetting_AllowDayNightCycle_C.Render Transform=True
+MM_WorldSetting_AllowDayNightCycle_C.Clipping=True
+MM_WorldSetting_AllowDayNightCycle_C.Navigation=True
+MM_WorldSetting_TimeInWorld_C.Default=True
+MM_WorldSetting_TimeInWorld_C.Appearance=True
+MM_WorldSetting_TimeInWorld_C.Designer=True
+MM_WorldSetting_TimeInWorld_C.Input=True
+MM_WorldSetting_TimeInWorld_C.Interaction=True
+MM_WorldSetting_TimeInWorld_C.Performance=True
+MM_WorldSetting_TimeInWorld_C.Layout=True
+MM_WorldSetting_TimeInWorld_C.Behavior=True
+MM_WorldSetting_TimeInWorld_C.Render Transform=True
+MM_WorldSetting_TimeInWorld_C.Clipping=True
+MM_WorldSetting_TimeInWorld_C.Navigation=True
+MM_WorldSetting_DayDuration_C.Default=True
+MM_WorldSetting_DayDuration_C.Appearance=True
+MM_WorldSetting_DayDuration_C.Designer=True
+MM_WorldSetting_DayDuration_C.Input=True
+MM_WorldSetting_DayDuration_C.Interaction=True
+MM_WorldSetting_DayDuration_C.Performance=True
+MM_WorldSetting_DayDuration_C.Layout=True
+MM_WorldSetting_DayDuration_C.Behavior=True
+MM_WorldSetting_DayDuration_C.Render Transform=True
+MM_WorldSetting_DayDuration_C.Clipping=True
+MM_WorldSetting_DayDuration_C.Navigation=True
+MM_WorldSetting_NightDuration_C.Default=True
+MM_WorldSetting_NightDuration_C.Appearance=True
+MM_WorldSetting_NightDuration_C.Designer=True
+MM_WorldSetting_NightDuration_C.Input=True
+MM_WorldSetting_NightDuration_C.Interaction=True
+MM_WorldSetting_NightDuration_C.Performance=True
+MM_WorldSetting_NightDuration_C.Layout=True
+MM_WorldSetting_NightDuration_C.Behavior=True
+MM_WorldSetting_NightDuration_C.Render Transform=True
+MM_WorldSetting_NightDuration_C.Clipping=True
+MM_WorldSetting_NightDuration_C.Navigation=True
+MM_WorldSetting_WorldTimeDilation_C.Default=True
+MM_WorldSetting_WorldTimeDilation_C.Appearance=True
+MM_WorldSetting_WorldTimeDilation_C.Designer=True
+MM_WorldSetting_WorldTimeDilation_C.Input=True
+MM_WorldSetting_WorldTimeDilation_C.Interaction=True
+MM_WorldSetting_WorldTimeDilation_C.Performance=True
+MM_WorldSetting_WorldTimeDilation_C.Layout=True
+MM_WorldSetting_WorldTimeDilation_C.Behavior=True
+MM_WorldSetting_WorldTimeDilation_C.Render Transform=True
+MM_WorldSetting_WorldTimeDilation_C.Clipping=True
+MM_WorldSetting_WorldTimeDilation_C.Navigation=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowChat.MM_ServerSetting_AllowChat
-OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/MM_ServerSettingsHeader.MM_ServerSettingsHeader
-OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowFriendsOnly.MM_ServerSetting_AllowFriendsOnly
-OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_MaxPlayers.MM_ServerSetting_MaxPlayers
+OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyGameInstance/MyGameInstance.MyGameInstance
+OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/MM_WorldSettingsHeader.MM_WorldSettingsHeader
+OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/WorldSettings.WorldSettings
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1303,29 +1360,29 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=EditorErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowFriendsOnly
-MRUItem1=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_MaxPlayers
-MRUItem2=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowChat
-MRUItem3=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/MM_ServerSettingsHeader
-MRUItem4=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowPVP
-MRUItem5=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowQuickSearch
-MRUItem6=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowVOIP
-MRUItem7=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_IsLan
-MRUItem8=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowInvites
-MRUItem9=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/ServerSettings
-MRUItem10=/Game/MyMenu/MM_Player/MM_Player
-MRUItem11=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_Password
-MRUItem12=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_ServerName
-MRUItem13=/Game/MyMenu/MM_Widget/MM_GUI/MM_GameSettings
-MRUItem14=/Game/MyMenu/MM_Widget/MM_GUI/MM_CategoryHeader
-MRUItem15=/Game/MyMenu/MM_Widget/MM_HostGame
-MRUItem16=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/MM_ServerTextBoxChild
-MRUItem17=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/MM_ServerSettingChild
-MRUItem18=/Game/MyGame/MyGameBlueprints/MyGameInstance/MyGameInstance
-MRUItem19=/Game/MyMenu/MM_Widget/MM_GUI/GameSettings
+MRUItem0=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_WorldTimeDilation
+MRUItem1=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_NightDuration
+MRUItem2=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_MaxPlayers
+MRUItem3=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/WorldSettings
+MRUItem4=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_DayDuration
+MRUItem5=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_TimeInWorld
+MRUItem6=/Game/MyMenu/MM_Widget/MM_GUI/MM_GameSettings
+MRUItem7=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/MM_WorldSettingsHeader
+MRUItem8=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_AllowDayNightCycle
+MRUItem9=/Game/MyGame/MyGameBlueprints/MyGameInstance/MyGameInstance
+MRUItem10=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/MM_ServerSettingsHeader
+MRUItem11=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/MM_ServerSettingsHeader
+MRUItem12=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/DayNightCycleEnum
+MRUItem13=/Game/MyMenu/MM_GameMode/MM_GameMode
+MRUItem14=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem15=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowFriendsOnly
+MRUItem16=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowChat
+MRUItem17=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowPVP
+MRUItem18=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowQuickSearch
+MRUItem19=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowVOIP
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
@@ -1373,6 +1430,14 @@ None=======
 /Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowChat.MM_ServerSetting_AllowChat=1
 /Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowQuickJoin.MM_ServerSetting_AllowQuickJoin=1
 /Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowPVP.MM_ServerSetting_AllowPVP=1
+/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/WorldSettings.WorldSettings=1
+/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/DayNightCycleEnum.DayNightCycleEnum=1
+/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/MM_WorldSettingsHeader.MM_WorldSettingsHeader=1
+/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_AllowDayNightCycle.MM_WorldSetting_AllowDayNightCycle=1
+/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_TimeInWorld.MM_WorldSetting_TimeInWorld=1
+/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_WorldTimeDilation.MM_WorldSetting_WorldTimeDilation=1
+/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_NightDuration.MM_WorldSetting_NightDuration=1
+/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_DayDuration.MM_WorldSetting_DayDuration=1
 
 [RootWindow]
 ScreenPosition=X=340.000 Y=200.000
@@ -2064,7 +2129,7 @@ Panel=False
 Primitive=False
 Special Effects=False
 Uncategorized=False
-User Created=False
+User Created=True
 Common=False
 
 [DetailCustomWidgetExpansion]
@@ -2147,6 +2212,10 @@ MM_ServerSetting_Password_C=StructProperty.DefaultValueCategory.None,
 MM_ServerSetting_MaxPlayers_C=StructProperty.DefaultValueCategory.None,
 MM_ServerSetting_IsLan_C=StructProperty.DefaultValueCategory.None,
 MM_ServerSetting_AllowInvites_C=StructProperty.DefaultValueCategory.None,
+MM_WorldSetting_AllowDayNightCycle_C=StructProperty.DefaultValueCategory.None,
+MM_WorldSetting_TimeInWorld_C=StructProperty.DefaultValueCategory.None,
+MM_WorldSetting_DayDuration_C=StructProperty.DefaultValueCategory.None,
+MM_WorldSetting_WorldTimeDilation_C=StructProperty.DefaultValueCategory.None,
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -2182,6 +2251,7 @@ WidgetComponent.UserInterface=True
 Texture2D.LevelOfDetail=True
 Texture2D.Texture=True
 Slider.Appearance=True
+WorldSettings.PrecomputedVisibility=True
 
 [DetailPropertyExpansion]
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2189,9 +2259,9 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.NormalThumbImage.TintColor\" "
-Visual="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.NormalThumbImage.TintColor\" "
-Object="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.NormalThumbImage.TintColor\" "
+Widget="\"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.Font\" "
+Object="\"Object.Appearance.Font\" "
 StaticMeshComponent=
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent=
@@ -2239,7 +2309,7 @@ ImgMediaSettings="\"Object.General.DefaultFrameRate\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
 Border="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" "
 ContentWidget="\"Object.Appearance.BackgroundColor\" "
-PanelWidget="\"Object.Appearance.BackgroundColor\" "
+PanelWidget=
 Button="\"Object.Appearance.BackgroundColor\" "
 Image="\"Object.Appearance.Brush\" "
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Style.WidgetStyle.FillImage.TintColor\" \"Object.Appearance.FillColorAndOpacity\" "
