--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -18,7 +18,7 @@ AssetViewerProfileName=
 MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowPosition=(X=-8,Y=-8)
+NewWindowPosition=(X=315,Y=143)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
@@ -1323,13 +1323,52 @@ MM_WorldSetting_WorldTimeDilation_C.Behavior=True
 MM_WorldSetting_WorldTimeDilation_C.Render Transform=True
 MM_WorldSetting_WorldTimeDilation_C.Clipping=True
 MM_WorldSetting_WorldTimeDilation_C.Navigation=True
+UserWidget.Appearance=True
+UserWidget.Input=True
+UserWidget.Interaction=True
+UserWidget.Layout=True
+UserWidget.Behavior=True
+UserWidget.Render Transform=True
+UserWidget.Performance=True
+UserWidget.Clipping=True
+UserWidget.Navigation=True
+MM_WaveSettingsHeader_C.Default=True
+MM_WaveSettingsHeader_C.Appearance=True
+MM_WaveSettingsHeader_C.Designer=True
+MM_WaveSettingsHeader_C.Input=True
+MM_WaveSettingsHeader_C.Interaction=True
+MM_WaveSettingsHeader_C.Performance=True
+MM_WaveSettingsHeader_C.Layout=True
+MM_WaveSettingsHeader_C.Behavior=True
+MM_WaveSettingsHeader_C.Render Transform=True
+MM_WaveSettingsHeader_C.Clipping=True
+MM_WaveSettingsHeader_C.Navigation=True
+MM_WaveSetting_StartWave_C.Default=True
+MM_WaveSetting_StartWave_C.Appearance=True
+MM_WaveSetting_StartWave_C.Designer=True
+MM_WaveSetting_StartWave_C.Input=True
+MM_WaveSetting_StartWave_C.Interaction=True
+MM_WaveSetting_StartWave_C.Performance=True
+MM_WaveSetting_StartWave_C.Layout=True
+MM_WaveSetting_StartWave_C.Behavior=True
+MM_WaveSetting_StartWave_C.Render Transform=True
+MM_WaveSetting_StartWave_C.Clipping=True
+MM_WaveSetting_StartWave_C.Navigation=True
+MM_WaveSetting_IntermissionTime_C.Default=True
+MM_WaveSetting_IntermissionTime_C.Appearance=True
+MM_WaveSetting_IntermissionTime_C.Designer=True
+MM_WaveSetting_IntermissionTime_C.Input=True
+MM_WaveSetting_IntermissionTime_C.Interaction=True
+MM_WaveSetting_IntermissionTime_C.Performance=True
+MM_WaveSetting_IntermissionTime_C.Layout=True
+MM_WaveSetting_IntermissionTime_C.Behavior=True
+MM_WaveSetting_IntermissionTime_C.Render Transform=True
+MM_WaveSetting_IntermissionTime_C.Clipping=True
+MM_WaveSetting_IntermissionTime_C.Navigation=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyGameInstance/MyGameInstance.MyGameInstance
-OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/MM_WorldSettingsHeader.MM_WorldSettingsHeader
-OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/WorldSettings.WorldSettings
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1363,26 +1402,26 @@ GlobalAssetPicker.CurrentViewType=0
 LastLogListing=EditorErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_WorldTimeDilation
-MRUItem1=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_NightDuration
-MRUItem2=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_MaxPlayers
-MRUItem3=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/WorldSettings
-MRUItem4=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_DayDuration
-MRUItem5=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_TimeInWorld
-MRUItem6=/Game/MyMenu/MM_Widget/MM_GUI/MM_GameSettings
-MRUItem7=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/MM_WorldSettingsHeader
-MRUItem8=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_AllowDayNightCycle
-MRUItem9=/Game/MyGame/MyGameBlueprints/MyGameInstance/MyGameInstance
-MRUItem10=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/MM_ServerSettingsHeader
-MRUItem11=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/MM_ServerSettingsHeader
-MRUItem12=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/DayNightCycleEnum
-MRUItem13=/Game/MyMenu/MM_GameMode/MM_GameMode
-MRUItem14=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem15=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowFriendsOnly
-MRUItem16=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowChat
-MRUItem17=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowPVP
-MRUItem18=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowQuickSearch
-MRUItem19=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowVOIP
+MRUItem0=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_IntermissionTime
+MRUItem1=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_StartWave
+MRUItem2=/Game/MyMenu/MM_Widget/MM_GUI/MM_GameSettings
+MRUItem3=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/WaveSettings
+MRUItem4=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/MM_WaveSettingsHeader
+MRUItem5=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_NightDuration
+MRUItem6=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_TimeInWorld
+MRUItem7=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_AllowDayNightCycle
+MRUItem8=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_DayDuration
+MRUItem9=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_WorldTimeDilation
+MRUItem10=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_MaxPlayers
+MRUItem11=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/WorldSettings
+MRUItem12=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/MM_WorldSettingsHeader
+MRUItem13=/Game/MyGame/MyGameBlueprints/MyGameInstance/MyGameInstance
+MRUItem14=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/MM_ServerSettingsHeader
+MRUItem15=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/MM_ServerSettingsHeader
+MRUItem16=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/DayNightCycleEnum
+MRUItem17=/Game/MyMenu/MM_GameMode/MM_GameMode
+MRUItem18=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem19=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowFriendsOnly
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
@@ -1438,6 +1477,10 @@ None=======
 /Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_WorldTimeDilation.MM_WorldSetting_WorldTimeDilation=1
 /Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_NightDuration.MM_WorldSetting_NightDuration=1
 /Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_DayDuration.MM_WorldSetting_DayDuration=1
+/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/WaveSettings.WaveSettings=1
+/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_StartWave.MM_WaveSetting_StartWave=1
+/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/MM_WaveSettingsHeader.MM_WaveSettingsHeader=1
+/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_IntermissionTime.MM_WaveSetting_IntermissionTime=1
 
 [RootWindow]
 ScreenPosition=X=340.000 Y=200.000
@@ -2216,6 +2259,8 @@ MM_WorldSetting_AllowDayNightCycle_C=StructProperty.DefaultValueCategory.None,
 MM_WorldSetting_TimeInWorld_C=StructProperty.DefaultValueCategory.None,
 MM_WorldSetting_DayDuration_C=StructProperty.DefaultValueCategory.None,
 MM_WorldSetting_WorldTimeDilation_C=StructProperty.DefaultValueCategory.None,
+MM_WaveSetting_StartWave_C=StructProperty.DefaultValueCategory.None,
+MM_WaveSetting_IntermissionTime_C=StructProperty.DefaultValueCategory.None,
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -2259,9 +2304,9 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget="\"Object.Appearance.Font\" "
-Visual="\"Object.Appearance.Font\" "
-Object="\"Object.Appearance.Font\" "
+Widget=
+Visual=
+Object=
 StaticMeshComponent=
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent=
@@ -2308,8 +2353,8 @@ LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 ImgMediaSettings="\"Object.General.DefaultFrameRate\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
 Border="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" "
-ContentWidget="\"Object.Appearance.BackgroundColor\" "
-PanelWidget=
+ContentWidget="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" "
+PanelWidget="\"Object.Style.WidgetStyle\" "
 Button="\"Object.Appearance.BackgroundColor\" "
 Image="\"Object.Appearance.Brush\" "
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Style.WidgetStyle.FillImage.TintColor\" \"Object.Appearance.FillColorAndOpacity\" "
@@ -2319,5 +2364,6 @@ GameInstance=
 MM_ServerSettingsHeader_C=
 UserWidget=
 EditableTextBox="\"Object.Appearance.WidgetStyle.Padding\" \"Object.Appearance.WidgetStyle.Font\" \"Object.Appearance.WidgetStyle.ScrollBarStyle\" "
+ScrollBox="\"Object.Style.WidgetStyle\" "
 
 
