--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1365,10 +1365,56 @@ MM_WaveSetting_IntermissionTime_C.Behavior=True
 MM_WaveSetting_IntermissionTime_C.Render Transform=True
 MM_WaveSetting_IntermissionTime_C.Clipping=True
 MM_WaveSetting_IntermissionTime_C.Navigation=True
+MM_WaveSetting_WaveSkip_C.Default=True
+MM_WaveSetting_WaveSkip_C.Appearance=True
+MM_WaveSetting_WaveSkip_C.Designer=True
+MM_WaveSetting_WaveSkip_C.Input=True
+MM_WaveSetting_WaveSkip_C.Interaction=True
+MM_WaveSetting_WaveSkip_C.Performance=True
+MM_WaveSetting_WaveSkip_C.Layout=True
+MM_WaveSetting_WaveSkip_C.Behavior=True
+MM_WaveSetting_WaveSkip_C.Render Transform=True
+MM_WaveSetting_WaveSkip_C.Clipping=True
+MM_WaveSetting_WaveSkip_C.Navigation=True
+MM_WaveSetting_PresentWaveMonsters_C.Default=True
+MM_WaveSetting_PresentWaveMonsters_C.Appearance=True
+MM_WaveSetting_PresentWaveMonsters_C.Designer=True
+MM_WaveSetting_PresentWaveMonsters_C.Input=True
+MM_WaveSetting_PresentWaveMonsters_C.Interaction=True
+MM_WaveSetting_PresentWaveMonsters_C.Performance=True
+MM_WaveSetting_PresentWaveMonsters_C.Layout=True
+MM_WaveSetting_PresentWaveMonsters_C.Behavior=True
+MM_WaveSetting_PresentWaveMonsters_C.Render Transform=True
+MM_WaveSetting_PresentWaveMonsters_C.Clipping=True
+MM_WaveSetting_PresentWaveMonsters_C.Navigation=True
+MM_WaveSetting_MonsterIncreasement_C.Default=True
+MM_WaveSetting_MonsterIncreasement_C.Appearance=True
+MM_WaveSetting_MonsterIncreasement_C.Designer=True
+MM_WaveSetting_MonsterIncreasement_C.Input=True
+MM_WaveSetting_MonsterIncreasement_C.Interaction=True
+MM_WaveSetting_MonsterIncreasement_C.Performance=True
+MM_WaveSetting_MonsterIncreasement_C.Layout=True
+MM_WaveSetting_MonsterIncreasement_C.Behavior=True
+MM_WaveSetting_MonsterIncreasement_C.Render Transform=True
+MM_WaveSetting_MonsterIncreasement_C.Clipping=True
+MM_WaveSetting_MonsterIncreasement_C.Navigation=True
+MM_WaveSetting_MonsterSpawnRate_C.Default=True
+MM_WaveSetting_MonsterSpawnRate_C.Appearance=True
+MM_WaveSetting_MonsterSpawnRate_C.Designer=True
+MM_WaveSetting_MonsterSpawnRate_C.Input=True
+MM_WaveSetting_MonsterSpawnRate_C.Interaction=True
+MM_WaveSetting_MonsterSpawnRate_C.Performance=True
+MM_WaveSetting_MonsterSpawnRate_C.Layout=True
+MM_WaveSetting_MonsterSpawnRate_C.Behavior=True
+MM_WaveSetting_MonsterSpawnRate_C.Render Transform=True
+MM_WaveSetting_MonsterSpawnRate_C.Clipping=True
+MM_WaveSetting_MonsterSpawnRate_C.Navigation=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/MM_WaveSettingsHeader.MM_WaveSettingsHeader
+OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterSpawnRate.MM_WaveSetting_MonsterSpawnRate
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1402,26 +1448,26 @@ GlobalAssetPicker.CurrentViewType=0
 LastLogListing=EditorErrors
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_IntermissionTime
-MRUItem1=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_StartWave
-MRUItem2=/Game/MyMenu/MM_Widget/MM_GUI/MM_GameSettings
+MRUItem0=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/MM_WaveSettingsHeader
+MRUItem1=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterSpawnRate
+MRUItem2=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterIncreasement
 MRUItem3=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/WaveSettings
-MRUItem4=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/MM_WaveSettingsHeader
-MRUItem5=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_NightDuration
-MRUItem6=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_TimeInWorld
-MRUItem7=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_AllowDayNightCycle
-MRUItem8=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_DayDuration
-MRUItem9=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_WorldTimeDilation
-MRUItem10=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_MaxPlayers
-MRUItem11=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/WorldSettings
-MRUItem12=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/MM_WorldSettingsHeader
-MRUItem13=/Game/MyGame/MyGameBlueprints/MyGameInstance/MyGameInstance
-MRUItem14=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/MM_ServerSettingsHeader
-MRUItem15=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/MM_ServerSettingsHeader
-MRUItem16=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/DayNightCycleEnum
-MRUItem17=/Game/MyMenu/MM_GameMode/MM_GameMode
-MRUItem18=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem19=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_AllowFriendsOnly
+MRUItem4=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_StartWave
+MRUItem5=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_PresentWaveMonsters
+MRUItem6=/Game/MyMenu/MM_Widget/MM_GUI/MM_GameSettings
+MRUItem7=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_WaveSkip
+MRUItem8=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_IntermissionTime
+MRUItem9=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_NightDuration
+MRUItem10=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_TimeInWorld
+MRUItem11=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_AllowDayNightCycle
+MRUItem12=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_DayDuration
+MRUItem13=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_WorldTimeDilation
+MRUItem14=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_MaxPlayers
+MRUItem15=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/WorldSettings
+MRUItem16=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/MM_WorldSettingsHeader
+MRUItem17=/Game/MyGame/MyGameBlueprints/MyGameInstance/MyGameInstance
+MRUItem18=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/MM_ServerSettingsHeader
+MRUItem19=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/MM_ServerSettingsHeader
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
@@ -1481,6 +1527,9 @@ None=======
 /Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_StartWave.MM_WaveSetting_StartWave=1
 /Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/MM_WaveSettingsHeader.MM_WaveSettingsHeader=1
 /Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_IntermissionTime.MM_WaveSetting_IntermissionTime=1
+/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_WaveSkip.MM_WaveSetting_WaveSkip=1
+/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_PresentWaveMonsters.MM_WaveSetting_PresentWaveMonsters=1
+/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterIncreasement.MM_WaveSetting_MonsterIncreasement=1
 
 [RootWindow]
 ScreenPosition=X=340.000 Y=200.000
@@ -2261,6 +2310,10 @@ MM_WorldSetting_DayDuration_C=StructProperty.DefaultValueCategory.None,
 MM_WorldSetting_WorldTimeDilation_C=StructProperty.DefaultValueCategory.None,
 MM_WaveSetting_StartWave_C=StructProperty.DefaultValueCategory.None,
 MM_WaveSetting_IntermissionTime_C=StructProperty.DefaultValueCategory.None,
+MM_WaveSetting_WaveSkip_C=StructProperty.DefaultValueCategory.None,
+MM_WaveSetting_PresentWaveMonsters_C=StructProperty.DefaultValueCategory.None,
+MM_WaveSetting_MonsterIncreasement_C=StructProperty.DefaultValueCategory.None,
+MM_WaveSetting_MonsterSpawnRate_C=StructProperty.DefaultValueCategory.None,
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -2354,7 +2407,7 @@ ImgMediaSettings="\"Object.General.DefaultFrameRate\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
 Border="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" "
 ContentWidget="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" "
-PanelWidget="\"Object.Style.WidgetStyle\" "
+PanelWidget=
 Button="\"Object.Appearance.BackgroundColor\" "
 Image="\"Object.Appearance.Brush\" "
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Style.WidgetStyle.FillImage.TintColor\" \"Object.Appearance.FillColorAndOpacity\" "
