--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1443,29 +1443,29 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [MessageLog]
-LastLogListing=EditorErrors
+LastLogListing=DataValidation
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/MM_WaveSettingsHeader
-MRUItem1=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterSpawnRate
-MRUItem2=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterIncreasement
-MRUItem3=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/WaveSettings
-MRUItem4=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_StartWave
-MRUItem5=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_PresentWaveMonsters
-MRUItem6=/Game/MyMenu/MM_Widget/MM_GUI/MM_GameSettings
-MRUItem7=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_WaveSkip
-MRUItem8=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_IntermissionTime
-MRUItem9=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_NightDuration
-MRUItem10=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_TimeInWorld
-MRUItem11=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_AllowDayNightCycle
-MRUItem12=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_DayDuration
-MRUItem13=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_WorldTimeDilation
-MRUItem14=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_MaxPlayers
-MRUItem15=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/WorldSettings
-MRUItem16=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/MM_WorldSettingsHeader
-MRUItem17=/Game/MyGame/MyGameBlueprints/MyGameInstance/MyGameInstance
-MRUItem18=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/MM_ServerSettingsHeader
-MRUItem19=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/MM_ServerSettingsHeader
+MRUItem0=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/MM_ServerSettingsHeader
+MRUItem1=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/MM_GameSettings
+MRUItem2=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/MM_WaveSettingsHeader
+MRUItem3=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterSpawnRate
+MRUItem4=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterIncreasement
+MRUItem5=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/WaveSettings
+MRUItem6=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_StartWave
+MRUItem7=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_PresentWaveMonsters
+MRUItem8=/Game/MyMenu/MM_Widget/MM_GUI/MM_GameSettings
+MRUItem9=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_WaveSkip
+MRUItem10=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_IntermissionTime
+MRUItem11=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_NightDuration
+MRUItem12=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_TimeInWorld
+MRUItem13=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_AllowDayNightCycle
+MRUItem14=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_DayDuration
+MRUItem15=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_WorldTimeDilation
+MRUItem16=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_MaxPlayers
+MRUItem17=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/WorldSettings
+MRUItem18=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/MM_WorldSettingsHeader
+MRUItem19=/Game/MyGame/MyGameBlueprints/MyGameInstance/MyGameInstance
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
@@ -1529,6 +1529,8 @@ None=======
 /Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_PresentWaveMonsters.MM_WaveSetting_PresentWaveMonsters=1
 /Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterIncreasement.MM_WaveSetting_MonsterIncreasement=1
 /Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterSpawnRate.MM_WaveSetting_MonsterSpawnRate=1
+/Game/MyMenu/MM_Widget/MM_GameSettingGUI/MM_GameSettings.MM_GameSettings=1
+/Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/MM_ServerSettingsHeader.MM_ServerSettingsHeader=1
 
 [RootWindow]
 ScreenPosition=X=340.000 Y=200.000
