--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -18,7 +18,7 @@ AssetViewerProfileName=
 MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowPosition=(X=-8,Y=-8)
+NewWindowPosition=(X=315,Y=143)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
@@ -1413,6 +1413,7 @@ MM_WaveSetting_MonsterSpawnRate_C.Navigation=True
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_Multiplayer.MM_Multiplayer
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1446,26 +1447,26 @@ GlobalAssetPicker.CurrentViewType=0
 LastLogListing=DataValidation
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/MM_ServerSettingsHeader
-MRUItem1=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/MM_GameSettings
-MRUItem2=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/MM_WaveSettingsHeader
-MRUItem3=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterSpawnRate
-MRUItem4=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterIncreasement
-MRUItem5=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/WaveSettings
-MRUItem6=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_StartWave
-MRUItem7=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_PresentWaveMonsters
-MRUItem8=/Game/MyMenu/MM_Widget/MM_GUI/MM_GameSettings
-MRUItem9=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_WaveSkip
-MRUItem10=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_IntermissionTime
-MRUItem11=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_NightDuration
-MRUItem12=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_TimeInWorld
-MRUItem13=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_AllowDayNightCycle
-MRUItem14=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_DayDuration
-MRUItem15=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_WorldTimeDilation
-MRUItem16=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_MaxPlayers
-MRUItem17=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/WorldSettings
-MRUItem18=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/MM_WorldSettingsHeader
-MRUItem19=/Game/MyGame/MyGameBlueprints/MyGameInstance/MyGameInstance
+MRUItem0=/Game/MyMenu/MM_Player/NewWidgetBlueprint
+MRUItem1=/Game/MyMenu/MM_Widget/MM_Multiplayer
+MRUItem2=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/MM_ServerSettingsHeader
+MRUItem3=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/MM_GameSettings
+MRUItem4=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/MM_WaveSettingsHeader
+MRUItem5=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterSpawnRate
+MRUItem6=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterIncreasement
+MRUItem7=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/WaveSettings
+MRUItem8=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_StartWave
+MRUItem9=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_PresentWaveMonsters
+MRUItem10=/Game/MyMenu/MM_Widget/MM_GUI/MM_GameSettings
+MRUItem11=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_WaveSkip
+MRUItem12=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_IntermissionTime
+MRUItem13=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_NightDuration
+MRUItem14=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_TimeInWorld
+MRUItem15=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_AllowDayNightCycle
+MRUItem16=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_DayDuration
+MRUItem17=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_WorldTimeDilation
+MRUItem18=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_MaxPlayers
+MRUItem19=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/WorldSettings
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
