--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -18,8 +18,8 @@ AssetViewerProfileName=
 MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowPosition=(X=-8,Y=-8)
-LastExecutedPlayModeType=PlayMode_InEditorFloating
+NewWindowPosition=(X=315,Y=143)
+LastExecutedPlayModeType=PlayMode_InNewProcess
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
@@ -1409,9 +1409,36 @@ MM_WaveSetting_MonsterSpawnRate_C.Behavior=True
 MM_WaveSetting_MonsterSpawnRate_C.Render Transform=True
 MM_WaveSetting_MonsterSpawnRate_C.Clipping=True
 MM_WaveSetting_MonsterSpawnRate_C.Navigation=True
+MM_WorldSettingsHeader_C.Layout=True
+MM_WorldSettingsHeader_C.Appearance=True
+MM_WorldSettingsHeader_C.Input=True
+MM_WorldSettingsHeader_C.Interaction=True
+MM_WorldSettingsHeader_C.Behavior=True
+MM_WorldSettingsHeader_C.Render Transform=True
+MM_WorldSettingsHeader_C.Performance=True
+MM_WorldSettingsHeader_C.Clipping=True
+MM_WorldSettingsHeader_C.Navigation=True
+MM_DeveloperMap_C.Layout=True
+MM_DeveloperMap_C.Appearance=True
+MM_DeveloperMap_C.Input=True
+MM_DeveloperMap_C.Interaction=True
+MM_DeveloperMap_C.Behavior=True
+MM_DeveloperMap_C.Render Transform=True
+MM_DeveloperMap_C.Performance=True
+MM_DeveloperMap_C.Clipping=True
+MM_DeveloperMap_C.Navigation=True
+MM_LevelSettings_C.Layout=True
+MM_LevelSettings_C.Appearance=True
+MM_LevelSettings_C.Input=True
+MM_LevelSettings_C.Interaction=True
+MM_LevelSettings_C.Behavior=True
+MM_LevelSettings_C.Render Transform=True
+MM_LevelSettings_C.Performance=True
+MM_LevelSettings_C.Clipping=True
+MM_LevelSettings_C.Navigation=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowser]
@@ -1428,7 +1455,7 @@ ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
 ContentBrowserTab1.SelectedPaths=/Game/MyGame/MyGameActors
-ContentBrowserTab1.SelectedPaths=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings
+ContentBrowserTab1.SelectedPaths=/Game/MyMenu/MM_Widget/MM_LevelSelectGUI
 None=======
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1443,29 +1470,29 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [MessageLog]
-LastLogListing=DataValidation
+LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/MM_ServerSettingsHeader
-MRUItem1=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/MM_GameSettings
-MRUItem2=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/MM_WaveSettingsHeader
-MRUItem3=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterSpawnRate
-MRUItem4=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterIncreasement
-MRUItem5=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/WaveSettings
-MRUItem6=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_StartWave
-MRUItem7=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_PresentWaveMonsters
-MRUItem8=/Game/MyMenu/MM_Widget/MM_GUI/MM_GameSettings
-MRUItem9=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_WaveSkip
-MRUItem10=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_IntermissionTime
-MRUItem11=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_NightDuration
-MRUItem12=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_TimeInWorld
-MRUItem13=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_AllowDayNightCycle
-MRUItem14=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_DayDuration
-MRUItem15=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_WorldTimeDilation
-MRUItem16=/Game/MyMenu/MM_Widget/MM_GUI/ServerSettings/Settings/MM_ServerSetting_MaxPlayers
-MRUItem17=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/WorldSettings
-MRUItem18=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/MM_WorldSettingsHeader
-MRUItem19=/Game/MyGame/MyGameBlueprints/MyGameInstance/MyGameInstance
+MRUItem0=/Game/MyMenu/MM_Widget/MM_LevelSelectGUI/MM_LevelSettings
+MRUItem1=/Game/MyMenu/MM_Widget/MM_LevelSelectGUI/MM_DeveloperMap
+MRUItem2=/Game/MyMenu/MM_Widget/MM_MainMenu
+MRUItem3=/Game/MyMenu/MM_Widget/MM_Multiplayer
+MRUItem4=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/MM_ServerSettingsHeader
+MRUItem5=/Game/MyMenu/MM_Widget/MM_GameSettingGUI/MM_GameSettings
+MRUItem6=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/MM_WaveSettingsHeader
+MRUItem7=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterSpawnRate
+MRUItem8=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterIncreasement
+MRUItem9=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/WaveSettings
+MRUItem10=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_StartWave
+MRUItem11=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_PresentWaveMonsters
+MRUItem12=/Game/MyMenu/MM_Widget/MM_GUI/MM_GameSettings
+MRUItem13=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_WaveSkip
+MRUItem14=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_IntermissionTime
+MRUItem15=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_NightDuration
+MRUItem16=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_TimeInWorld
+MRUItem17=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_AllowDayNightCycle
+MRUItem18=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_DayDuration
+MRUItem19=/Game/MyMenu/MM_Widget/MM_GUI/WorldSettings/Settings/MM_WorldSetting_WorldTimeDilation
 
 [AssetEditorToolkitTabLocation]
 /Game/MyGame/MyPlayer/MyPlayer.MyPlayer=1
@@ -1531,11 +1558,13 @@ None=======
 /Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterSpawnRate.MM_WaveSetting_MonsterSpawnRate=1
 /Game/MyMenu/MM_Widget/MM_GameSettingGUI/MM_GameSettings.MM_GameSettings=1
 /Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/MM_ServerSettingsHeader.MM_ServerSettingsHeader=1
+/Game/MyMenu/MM_Widget/MM_LevelSelectGUI/MM_LevelSettings.MM_LevelSettings=1
+/Game/MyMenu/MM_Widget/MM_LevelSelectGUI/MM_DeveloperMap.MM_DeveloperMap=1
 
 [RootWindow]
-ScreenPosition=X=340.000 Y=200.000
+ScreenPosition=X=60.000 Y=254.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2222,7 +2251,7 @@ Panel=False
 Primitive=False
 Special Effects=False
 Uncategorized=False
-User Created=True
+User Created=False
 Common=False
 
 [DetailCustomWidgetExpansion]
@@ -2406,10 +2435,10 @@ IOSRuntimeSettings="\"Object.Audio.CompressionOverrides\" "
 LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 ImgMediaSettings="\"Object.General.DefaultFrameRate\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
-Border="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" "
-ContentWidget="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" "
+Border="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.BackgroundColor\" "
 PanelWidget=
-Button="\"Object.Appearance.BackgroundColor\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.BackgroundColor\" "
 Image="\"Object.Appearance.Brush\" "
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Style.WidgetStyle.FillImage.TintColor\" \"Object.Appearance.FillColorAndOpacity\" "
 Slider="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.NormalThumbImage.TintColor\" "
