--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1411,9 +1411,8 @@ MM_WaveSetting_MonsterSpawnRate_C.Clipping=True
 MM_WaveSetting_MonsterSpawnRate_C.Navigation=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/MyMenu/MM_Widget/MM_Multiplayer.MM_Multiplayer
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1429,7 +1428,7 @@ ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
 ContentBrowserTab1.SelectedPaths=/Game/MyGame/MyGameActors
-ContentBrowserTab1.SelectedPaths=/Game/MyMenu/MM_Widget/MM_GUI/WaveSettings
+ContentBrowserTab1.SelectedPaths=/Game/MyMenu/MM_Player
 None=======
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1532,6 +1531,7 @@ None=======
 /Game/MyMenu/MM_Widget/MM_GUI/WaveSettings/Settings/MM_WaveSetting_MonsterSpawnRate.MM_WaveSetting_MonsterSpawnRate=1
 /Game/MyMenu/MM_Widget/MM_GameSettingGUI/MM_GameSettings.MM_GameSettings=1
 /Game/MyMenu/MM_Widget/MM_GameSettingGUI/ServerSettings/MM_ServerSettingsHeader.MM_ServerSettingsHeader=1
+/Game/MyMenu/MM_Player/NewWidgetBlueprint.NewWidgetBlueprint=1
 
 [RootWindow]
 ScreenPosition=X=340.000 Y=200.000
@@ -2224,7 +2224,6 @@ Primitive=False
 Special Effects=False
 Uncategorized=False
 User Created=True
-Common=False
 
 [DetailCustomWidgetExpansion]
 SphereComponent=SphereComponent.Collision.Collision,
@@ -2359,9 +2358,9 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget=
-Visual=
-Object=
+Widget="\"Object.Appearance.Brush\" "
+Visual="\"Object.Appearance.Brush\" "
+Object="\"Object.Appearance.Brush\" "
 StaticMeshComponent=
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent=
@@ -2409,7 +2408,7 @@ ImgMediaSettings="\"Object.General.DefaultFrameRate\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
 Border="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" "
 ContentWidget="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" "
-PanelWidget=
+PanelWidget="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" "
 Button="\"Object.Appearance.BackgroundColor\" "
 Image="\"Object.Appearance.Brush\" "
 ProgressBar="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Style.WidgetStyle.FillImage.TintColor\" \"Object.Appearance.FillColorAndOpacity\" "
