--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1436,6 +1436,7 @@ MM_LevelSettings_C.Render Transform=True
 MM_LevelSettings_C.Performance=True
 MM_LevelSettings_C.Clipping=True
 MM_LevelSettings_C.Navigation=True
+MM_DeveloperMap_C.Default=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1562,7 +1563,7 @@ None=======
 /Game/MyMenu/MM_Widget/MM_LevelSelectGUI/MM_DeveloperMap.MM_DeveloperMap=1
 
 [RootWindow]
-ScreenPosition=X=60.000 Y=254.000
+ScreenPosition=X=419.000 Y=132.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=False
 
@@ -2344,6 +2345,7 @@ MM_WaveSetting_WaveSkip_C=StructProperty.DefaultValueCategory.None,
 MM_WaveSetting_PresentWaveMonsters_C=StructProperty.DefaultValueCategory.None,
 MM_WaveSetting_MonsterIncreasement_C=StructProperty.DefaultValueCategory.None,
 MM_WaveSetting_MonsterSpawnRate_C=StructProperty.DefaultValueCategory.None,
+MM_DeveloperMap_C=StructProperty.DefaultValueCategory.None,
 
 [UMGEditor.Designer]
 PreviewWidth=1280
